# rand-guard

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.opencode/agents/: ebpf-implementer.md  edr-architect.md  repo-explorer.md  security-reviewer.md
.opencode/skills/edr-detection-design/: SKILL.md
.opencode/skills/project-verification/: SKILL.md
.opencode/skills/rust-ebpf-edr/: SKILL.md
crates/common/: Cargo.toml
crates/common/src/: file.rs  header.rs  kinds.rs  lib.rs  (+2 more)
crates/ebpf/: Cargo.toml
crates/user/: Cargo.toml
crates/user/src/: attach.rs  config.rs  detections.rs  dispatch.rs  logging.rs  main.rs  normalize.rs  output.rs  privilege.rs  process_table.rs  rate_limiter.rs  rules.rs  scenarios.rs
crates/user/src/config/: mod.rs  types.rs  validation.rs
crates/user/src/normalize/: file.rs  helpers.rs  mod.rs  network.rs  process.rs  types.rs
crates/user/src/output/: alert.rs  dispatcher.rs  file.rs  health.rs  mod.rs  network.rs  process.rs  writer.rs
crates/user/src/rules/: alerts.rs  builtins.rs  engine.rs  matchers.rs  mod.rs
crates/user/tests/: e2e_pipeline.rs
docs/: architecture.md  benchmarks.md  demo-scenarios.md  quickstart.md  roadmap.md  threat-model.md
packaging/config/: rand-guard.toml
packaging/rules.d/: sample-rules.toml
packaging/systemd/: rand-guard.service
scripts/: install.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+9 files in other folders)
