[package]
name = "edr-user"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1"
edr-common = { path = "../common", features = ["user"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }