[package]
name = "edr-user"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1"
edr-common = { path = "../common", features = ["user"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
